--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,37 +1,97 @@
-@import "../../Assets/Styles/base/variables";
+@import "../../Assets/styles/variables.scss";
 
-.navbar-container{
+.navbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1em;
+  background-color: #e0e0e0;
+}
+
+.navbar {
+  display: flex;
+
+  ul > li {
+    display: inline;
+    a {
+      text-decoration: none;
+      color: $darkGrey;
+      font-size: 1.2em;
+    }
+    & + li {
+      margin-left: 2em;
+    }
+  }
+}
+
+.mobile-menu-dropdown {
+  position: absolute;
+  align-items: center;
+  right: 0;
+  top: 60px;
+  background-color: rgb(179, 179, 179);
+  width: 40%;
+  height: 100%;
+
+  .dropdown-section {
+    margin:1.4em;
+
+    & > * + * {
+        margin-top:1.1em;
+    }
+    a {
+      display: block;
+      font-size: 1.6em;
+      color: white;
+      text-decoration: none;
+    }
+  }
+}
+
+.mobile-menu-button {
+  display: block;
+  background: url('../../Assets/images/icons/hamburger.png');
+  width:30px;
+  height:30px;
+  border:none;
+  background-size: cover;
+  cursor:pointer;
+}
+
+.logo {
+  font-size: 1.2em;
+  color: rgb(40, 40, 109);
+}
+
+.desktop-view {
+  display: none;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  width: 16em;
+
+  .user-name {
+    font-size: 1.3em;
+  }
+  & > * + * {
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (min-width: $desktopScreen) {
+  .mobile-menu-button {
+    display: none;
+  }
+  .mobile-menu-dropdown {
+    display: none;
+    align-items: center;
+  }
+
+  .desktop-view {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding:1em;
-    background-color: #F8F8F8;
-    box-shadow: 2px 2px 6px rgba(0,0,0, 0.3);
-}
-
-.navbar{
-    display: flex;
-
-    ul > li{
-        display: inline;
-        a {
-            text-decoration: none;
-            color: $fontGrey;
-        }
-        & + li{
-            margin-left: 2em;
-        }
-
-    }
-
-}
-
-.login-container{
-    display: flex;
-    flex-direction: row-reverse;
-    width:12em;
-    & > * + *{
-        margin-right:10px;
-
-    }
+  }
 }
