--- a/src/components/CourseDetailBox/CourseDetailCard.module.scss
+++ b/src/components/CourseDetailBox/CourseDetailCard.module.scss
@@ -1,15 +1,28 @@
-.course-detail-card{
-    background-color: white;
-    width:100%;
-    max-width:400px;
-    margin:0.6em;
+.course-detail-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  width: 100%;
+  height:200px;
+  max-width: 400px;
+  margin: 1em;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+  padding: 1em 0.8em;
 
-    img{
-        width: 100%;
+  .course-info-box {
+
+    & > * + * {
+        margin: 0.2em 0;
     }
 
-}
+    p{
+        font-size: 1.2em;
+    }
+  }
 
-.course-title{
-    font-size: 1.3em;
+  h2 {
+    font-size: 1.7em;
+  }
+
 }
