--- a/src/components/Layouts/Main/MainStyle.scss
+++ b/src/components/Layouts/Main/MainStyle.scss
@@ -1,6 +1,7 @@
 main{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     background-color: #F4F4F4;
+    min-height:100vh;
 }
