Added TTD to the following components:     Table     CourseRegisterPage     NotFoundPage
Added more responsiveness for main page, courses and teachers page list

Added instructions on readme

--- a/src/components/CourseDetailBox/CourseDetailList.module.scss
+++ b/src/components/CourseDetailBox/CourseDetailList.module.scss
@@ -1,9 +1,17 @@
+@import '../../Assets/styles/variables.scss';
 
 .courses-container{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
     justify-content: center;
     max-width: 100%;
+}
+
+@media only screen and (min-width: $tabletScreen){
+    .courses-container{
+        flex-flow: row wrap;
+    }
+
 }
 
 .courses-menu{
