--- a/src/components/CourseDetailBox/CourseDetailCard.module.scss
+++ b/src/components/CourseDetailBox/CourseDetailCard.module.scss
@@ -1,3 +1,5 @@
+@import '../../Assets/styles/variables.scss';
+
 .course-detail-card {
   display: flex;
   flex-direction: column;
@@ -5,10 +7,11 @@
   background-color: white;
   width: 100%;
   height:200px;
-  max-width: 400px;
-  margin: 1em;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-  padding: 1em 0.8em;
+  margin: 1em 0;
+  h2{
+    font-size: 100%;
+  }
 
   .course-info-box {
 
@@ -23,6 +26,16 @@
 
   h2 {
     font-size: 1.7em;
+  }
+
+}
+
+@media only screen and (min-width: $tabletScreen){
+  .course-detail-card{
+    max-width: 400px;
+    padding: 1em 0.8em;
+    margin: 1em;
+
   }
 
 }
