--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,3 +1,5 @@
+@import '../../Assets/styles/variables.scss';
+
 .form {
   width: 100%;
   max-width: 400px;
@@ -46,5 +48,20 @@
   textarea {
     resize: vertical;
     min-height: 200px;
+  }
+
+  button[type='submit']{
+    border-radius: 10px;
+    border:none;
+    background-color: rgb(110, 118, 231);
+    color:white;
+    padding:10px 15px;
+    font-size:1.3em;
+    align-self: center;
+    cursor:pointer;
+    &:disabled{
+      background-color: $lightGrey;
+      cursor:default;
+    }
   }
 }
