--- a/src/components/UI/Table/Table.module.scss
+++ b/src/components/UI/Table/Table.module.scss
@@ -4,7 +4,7 @@
 .table{
     border-collapse: collapse;
     width:100%;
-    font-size: 1.2em;
+    font-size: 0.8em;
     thead{
         font-size: 1.1em;
         font-family: Roboto;
@@ -29,6 +29,13 @@
             }
         }
 
+    }
+
+}
+
+@media only screen and (min-width:$tabletScreen){
+    .table{
+        font-size: 1.2em;
     }
 
 }
