--- a/src/components/Layouts/Main/MainStyle.scss
+++ b/src/components/Layouts/Main/MainStyle.scss
@@ -4,4 +4,6 @@ main{
     align-items: center;
     background-color: #F4F4F4;
     min-height:100vh;
+    max-width: 100vw;
+    overflow-x: auto;
 }
