--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1em;
   background-color: #e0e0e0;
+  padding:1em 0;
 }
 
 .navbar {
@@ -82,6 +82,11 @@
 }
 
 @media only screen and (min-width: $desktopScreen) {
+
+  .navbar-container{
+    padding: 1em;
+
+  }
   .mobile-menu-button {
     display: none;
   }
